--- a/index.html
+++ b/index.html
@@ -129,28 +129,28 @@
                     </div>
                 </a>
             </div>
-            <div class="worksItem disappearAtSmallScreen" id="worksItemNo8">
+            <div class="worksItem disappearAtSmallScreen disappearAtMediumScreen" id="worksItemNo8">
                 <a href="#">
                     <div class="worksItemDescription">
                         <p>야 놀자 좋은 숙박 연구 쇠<br/> 반응 형 웹 사이트<br/> 리뉴 말 제작</p>
                     </div>
                 </a>
             </div>
-            <div class="worksItem disappearAtSmallScreen" id="worksItemNo9">
+            <div class="worksItem disappearAtSmallScreen disappearAtMediumScreen" id="worksItemNo9">
                 <a href="#">
                     <div class="worksItemDescription">
                         <p>야 놀자 좋은 숙박 연구 쇠<br/> 반응 형 웹 사이트<br/> 리뉴 말 제작</p>
                     </div>
                 </a>
             </div>
-            <div class="worksItem disappearAtSmallScreen" id="worksItemNo10">
+            <div class="worksItem disappearAtSmallScreen disappearAtMediumScreen" id="worksItemNo10">
                 <a href="#">
                     <div class="worksItemDescription">
                         <p>야 놀자 좋은 숙박 연구 쇠<br/> 반응 형 웹 사이트<br/> 리뉴 말 제작</p>
                     </div>
                 </a>
             </div>
-            <div class="worksItem disappearAtSmallScreen" id="worksItemNo11">
+            <div class="worksItem disappearAtSmallScreen disappearAtMediumScreen" id="worksItemNo11">
                 <a href="#">
                     <div class="worksItemDescription">
                         <p>야 놀자 좋은 숙박 연구 쇠<br/> 반응 형 웹 사이트<br/> 리뉴 말 제작</p>
