--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                 <p>궁금한 사항이 있거나 디자인 의뢰를<br/>원하시면 언제든지 연락주세요</p>
             </div>
         </div>
+        <a class="bottomPageButton" href="index.html#footer"><i class="fas fa-chevron-down"></i>
+
+        </a>
     </main>
     <section class="link">
         <a class="linkAbout" href="#">
@@ -173,8 +176,9 @@
         <p>Want to know more about us? Want to have awesome design?<br/>Give us a call or drop us an email and we will get back to you as soon as we can.</p>
         <h2>contact@theplane.co.kr<br/>+82.2.6497.4545</h2>
         <button type="submit">Contact us</button>
+        <a class="topPageButton" href="index.html#"><i class="fas fa-arrow-up"></i></a>
     </section>
-    <footer>
+    <footer id="footer">
         <div class="socialLink">
             <a href=""><i class="fab fa-facebook-f"></i></a>
             <a href=""><i class="fas fa-envelope"></i></a>
