--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
     <header>
         <div class="menu">
-            <a class="logoAtBigScreen" href="plane.html"><img src="img/logo.png" alt="logo" /></a>
-            <a class="logoAtSmallScreen" href="plane.html"><img src="img/logoWhite.png" alt="logo" /></a>
+            <a class="logoAtBigScreen" href="index.html" alt="logo"><img src="img/logo.png" alt="logo" /></a>
+            <a class="logoAtSmallScreen" href="index.html" alt="logo"><img src="img/logoWhite.png" alt="logo" /></a>
             <ul>
                 <li><a href="#">works</a></li>
                 <li><a href="#">company</a></li>
                 <li><a href="#">recruit</a></li>
                 <li><a href="#">contact us</a></li>
             </ul>
-            <span class="sideNavIcon" id="sideNavIcon" onclick="openNav()">&#9776;</span>
+            <span class="sideNavIcon" id="sideNavIcon" onclick="openNav()" onkeypress="openNav()">&#9776;</span>
             <div id="mySideNav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" onkeypress="closeNav()">&times;</a>
                 <a href="#" class="smallScreenMenuItem">About</a>
                 <a href="#" class="smallScreenMenuItem">Services</a>
                 <a href="#" class="smallScreenMenuItem">Clients</a>
@@ -36,49 +36,47 @@
     <main>
         <div class="slideWrapper">
             <div class="slideNo1">
-                <h1 class="fontMyriadProBold">creative</h1>
-                <h1 class="fontMyriadProLight">design</h1>
+                <h2 class="fontMyriadProBold">creative</h2>
+                <h2 class="fontMyriadProLight">design</h2>
                 <p>궁금한 사항이 있거나 디자인 의뢰를<br/>원하시면 언제든지 연락주세요</p>
             </div>
             <div class="slideNo2">
-                <h1 class="fontMyriadProBold">plane</h1>
-                <h1 class="fontMyriadProLight">convergence</h1>
+                <h2 class="fontMyriadProBold">plane</h2>
+                <h2 class="fontMyriadProLight">convergence</h2>
                 <p>궁금한 사항이 있거나 디자인 의뢰를<br/>원하시면 언제든지 연락주세요</p>
             </div>
             <div class="slideNo3">
-                <h1 class="fontMyriadProBold">plane</h1>
-                <h1 class="fontMyriadProLight">convergence</h1>
+                <h2 class="fontMyriadProBold">plane</h2>
+                <h2 class="fontMyriadProLight">convergence</h2>
                 <p>궁금한 사항이 있거나 디자인 의뢰를<br/>원하시면 언제든지 연락주세요</p>
             </div>
             <div class="slideNo4">
-                <h1 class="fontMyriadProBold">plane</h1>
-                <h1 class="fontMyriadProLight">convergence</h1>
+                <h2 class="fontMyriadProBold">plane</h2>
+                <h2 class="fontMyriadProLight">convergence</h2>
                 <p>궁금한 사항이 있거나 디자인 의뢰를<br/>원하시면 언제든지 연락주세요</p>
             </div>
         </div>
-        <a class="bottomPageButton" href="index.html#footer"><i class="fas fa-chevron-down"></i>
-
-        </a>
+        <a class="bottomPageButton" href="index.html#footer" alt="go-to-bottom-page"><i class="fas fa-chevron-down"></i></a>
     </main>
     <section class="link">
         <a class="linkAbout" href="#">
-            <h1 class="fontMyriadProBold">about</h1>
+            <h2 class="fontMyriadProBold">about</h2>
         </a>
         <a class="linkRecruit" href="#">
-            <h1 class="fontMyriadProBold">recruit</h1>
+            <h2 class="fontMyriadProBold">recruit</h2>
             <h3 class="fontMyriadProBold">open recruit</h3>
         </a>
         <a class="linkBrochure" href="#">
-            <h1 class="fontMyriadProBold">brochure</h1>
+            <h2 class="fontMyriadProBold">brochure</h2>
         </a>
         <a class="linkService" href="#">
-            <h1 class="fontMyriadProBold">service</h1>
+            <h2 class="fontMyriadProBold">service</h2>
             <h3 class="fontMyriadProBold">what we do</h3>
         </a>
     </section>
     <section class="works">
         <div class="worksTitle">
-            <h1>works</h1>
+            <h2>works</h2>
             <div class="worksDivideLine"></div>
             <h3>plane porfolio</h3>
         </div>
@@ -170,19 +168,19 @@
         </div>
     </section>
     <section class="contact">
-        <h1>contact</h1>
+        <h2>contact</h2>
         <div class="contactDivideLine"></div>
         <h3>궁금한 사항이 있거나 디자인 의뢰를 원하시면 언제든지 연락주세요</h3>
         <p>Want to know more about us? Want to have awesome design?<br/>Give us a call or drop us an email and we will get back to you as soon as we can.</p>
-        <h2>contact@theplane.co.kr<br/>+82.2.6497.4545</h2>
+        <h4>contact@theplane.co.kr<br/>+82.2.6497.4545</h4>
         <button type="submit">Contact us</button>
-        <a class="topPageButton" href="index.html#"><i class="fas fa-arrow-up"></i></a>
+        <a class="topPageButton" href="index.html#" alt="go-to-top-page"><i class="fas fa-arrow-up"></i></a>
     </section>
     <footer id="footer">
         <div class="socialLink">
-            <a href=""><i class="fab fa-facebook-f"></i></a>
-            <a href=""><i class="fas fa-envelope"></i></a>
-            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href="#" alt="link-to-facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" alt="link-to-mail"><i class="fas fa-envelope"></i></a>
+            <a href="#" alt="link-to-twitter"><i class="fab fa-twitter"></i></a>
         </div>
         <p>Copyright 2018 &copy; plane convergence All Right Reserved.</p>
     </footer>
