--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <div class="menu">
-            <a class="logoAtBigScreen" href="index.html" alt="logo"><img src="img/logo.png" alt="logo" /></a>
-            <a class="logoAtSmallScreen" href="index.html" alt="logo"><img src="img/logoWhite.png" alt="logo" /></a>
+            <a class="logoAtBigScreen" href="index.html"><img src="img/logo.png" alt="logo" /></a>
+            <a class="logoAtSmallScreen" href="index.html"><img src="img/logoWhite.png" alt="logo" /></a>
             <ul>
                 <li><a href="#">works</a></li>
                 <li><a href="#">company</a></li>
@@ -56,7 +56,7 @@
                 <p>궁금한 사항이 있거나 디자인 의뢰를<br/>원하시면 언제든지 연락주세요</p>
             </div>
         </div>
-        <a class="bottomPageButton" href="index.html#footer" alt="go-to-bottom-page"><i class="fas fa-chevron-down"></i></a>
+        <a class="bottomPageButton" href="index.html#footer"><i class="fas fa-chevron-down"></i></a>
     </main>
     <section class="link">
         <a class="linkAbout" href="#">
@@ -174,13 +174,13 @@
         <p>Want to know more about us? Want to have awesome design?<br/>Give us a call or drop us an email and we will get back to you as soon as we can.</p>
         <h4>contact@theplane.co.kr<br/>+82.2.6497.4545</h4>
         <button type="submit">Contact us</button>
-        <a class="topPageButton" href="index.html#" alt="go-to-top-page"><i class="fas fa-arrow-up"></i></a>
+        <a class="topPageButton" href="index.html#"><i class="fas fa-arrow-up"></i></a>
     </section>
     <footer id="footer">
         <div class="socialLink">
-            <a href="#" alt="link-to-facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" alt="link-to-mail"><i class="fas fa-envelope"></i></a>
-            <a href="#" alt="link-to-twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fas fa-envelope"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
         <p>Copyright 2018 &copy; plane convergence All Right Reserved.</p>
     </footer>
