fix again on the compatibility

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <li><a href="#">recruit</a></li>
                 <li><a href="#">contact us</a></li>
             </ul>
-            <span class="sideNavIcon" id="sideNavIcon" onclick="openNav()" onkeypress="openNav()">&#9776;</span>
+            <span class="sideNavIcon" id="sideNavIcon" onclick="openNav()">&#9776;</span>
             <div id="mySideNav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" onkeypress="closeNav()">&times;</a>
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="#" class="smallScreenMenuItem">About</a>
                 <a href="#" class="smallScreenMenuItem">Services</a>
                 <a href="#" class="smallScreenMenuItem">Clients</a>
@@ -36,7 +36,7 @@
     <main>
         <div class="slideWrapper">
             <div class="slideNo1">
-                <h2 class="fontMyriadProBold">creative</h2>
+                <h1 class="fontMyriadProBold">creative</h1>
                 <h2 class="fontMyriadProLight">design</h2>
                 <p>궁금한 사항이 있거나 디자인 의뢰를<br/>원하시면 언제든지 연락주세요</p>
             </div>
